--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
+    "postinstall": "prisma generate",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,6 +16,7 @@
     "bcryptjs-react": "^2.4.6",
     "cookie": "^0.6.0",
     "cookies": "^0.9.1",
+    "monaco-editor": "^0.50.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
