--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "bcryptjs-react": "^2.4.6",
     "cookie": "^0.6.0",
     "cookies": "^0.9.1",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
