--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
