--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
